--- a/templates/app.html
+++ b/templates/app.html
@@ -1,8 +1,16 @@
 <h1>{{title}}</h1>
 <h2>My Heroes</h2>
+
+<!--
+[] Property Binding
+() Event Binding
+    on-event="expression"
+    (event)="expression"
+[()] Two-way Binding
+!-->
 <div class="heroes">
     <li *ng-for="#hero of heroes"
-        (click)="onSelect(hero)"
+        on-click="onSelect(hero)"
         [ng-class]="getSelectedClass(hero)">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
     </li>
