--- a/templates/app.html
+++ b/templates/app.html
@@ -8,18 +8,4 @@
     (event)="expression"
 [()] Two-way Binding
 !-->
-<div class="heroes">
-    <li *ng-for="#hero of heroes"
-        on-click="onSelect(hero)"
-        [ng-class]="getSelectedClass(hero)">
-        <span class="badge">{{hero.id}}</span> {{hero.name}}
-    </li>
-</div>
-<hr />
-<div *ng-if="selectedHero">
-    <h2>{{selectedHero.name}} Details</h2>
-    <div><label>ID: </label>{{selectedHero.id}}</div>
-    <div>
-        <label>name: </label><input [(ng-model)]="selectedHero.name" value="{{selectedHero.name}}" placeholder="Name" />
-    </div>
-</div>
+<hero-list [heroes]="heroes">Generating List ...</hero-list>
